--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -1,7 +1,11 @@
 		h1	{
+			 text-align: center;
+			 border: thick solid red;
+			 padding: 1ex;
+			 width: 50%;
+			 text-decoration: none;
 			 font-size: 24pt ;
 			 color: red;
-			 text-decoration: underline;
 			 font family: tahoma, helvetica, sans-serif;
 			}
 		em	{
@@ -12,4 +16,18 @@
 			}
 		ul	{
 			 list-style-type: square;
+			}
+		a:hover {
+			 text-decoration: none;
+			}
+		li:first-child {
+			 border: thick solid green;
+			 margin-bottom: 1em;
+			 margin-top: 1em;
+			 padding: 1ex;
+			 width: 40%;
+			}
+		p.centered {
+			 text-align: center;
+			 width: 50%;
 			}
